# quantum

./: README.md
dsa/: Dockerfile  Dockerfile.cpp  Makefile  README.md  docker-compose.yml  pyproject.toml
dsa/docs/: CERTIFICATE_GUIDE.md  KAT_TESTS.md  MANUAL.md  SECURITY_ASSESSMENT.md
dsa/examples/: comparison.py  document_signing.py
dsa/examples/app/: Dockerfile  Dockerfile.cpp  README.md  client.cpp  client.py  docker-compose.yml  server.cpp  server.py
dsa/examples/cpp/: generate_keys.cpp  mldsa_certificate.cpp  slhdsa_certificate.cpp
dsa/examples/py/: api_authentication.py  generate_keys.py
dsa/scripts/: download_kat_vectors.sh
dsa/src/cpp/: CMakeLists.txt  main.cpp
dsa/src/cpp/mldsa/: encoding.hpp  mldsa.hpp  ntt.hpp  params.hpp  sampling.hpp  utils.cpp  utils.hpp
dsa/src/cpp/slhdsa/: address.hpp  ct_utils.hpp  fors.hpp  hash_functions.cpp  hash_functions.hpp  hypertree.hpp  params.hpp  slh_dsa.hpp  utils.cpp  utils.hpp  wots.hpp  xmss.hpp
dsa/src/dsa/mldsa/: __init__.py  encoding.py  mldsa.py  ntt.py  params.py  sampling.py  utils.py
dsa/src/dsa/slhdsa/: address.py  fors.py  hypertree.py  slh_dsa.py  wots.py  xmss.py
dsa/src/py/: __init__.py
dsa/src/py/dsa/slhdsa/: hash_functions.py  parameters.py  utils.py
dsa/src/py/slhdsa/: __init__.py
dsa/tests/: debug_prf.py  test_slhdsa.py
dsa/tests/cpp/: test_mldsa.cpp  test_mldsa_kat.cpp  test_slhdsa.cpp  test_slhdsa_kat.cpp
dsa/tests/py/: test_keygen.py  test_mldsa.py
qkd/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  demo.py  docker-compose.yml  pyproject.toml
qkd/docs/: QKD_GUIDE.md  SUPERDENSE_GUIDE.md
qkd/examples/: break_ecdsa.py  break_rsa.py  quantum_threat_overview.py  shors_cirq_demo.py
qkd/src/qkd/: __init__.py  analysis.py  bb84.py  participants.py  superdense.py
qkd/src/shors_threat/: __init__.py  ecdsa_attack.py  rsa_attack.py  shors_algorithm.py  shors_cirq.py
qkd/src/shors_threat/quantum/: __init__.py  modular_arithmetic.py  period_finding.py  qft.py  shors_cirq.py
qkd/tests/: __init__.py  conftest.py  test_bb84.py  test_shors.py  test_superdense.py
